--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -22,98 +22,66 @@ services:
       DEFAULT_VECTORIZER_MODULE: text2vec-transformers
       TRANSFORMERS_INFERENCE_API: http://t2v-transformers:8080
       CLUSTER_HOSTNAME: 'weaviate-1'
-  t2v-transformers:  # Set the name of the inference container
+      VECTOR_DB_HOST: '${VECTOR_DB_HOST}'
+      VECTOR_DB_PORT: '${VECTOR_DB_PORT}'
+    networks:
+      - backend
+
+  t2v-transformers:
+    container_name: t2v-transformers-test
+    platform: linux/x86_64
     image: cr.weaviate.io/semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
     environment:
-      ENABLE_CUDA: 0 
+      ENABLE_CUDA: 0
+    networks:
+      - backend
+
   neo4j:
+    container_name: neo4j-test
+    platform: linux/x86_64
     image: neo4j:5.22.0
     ports:
-    - ${NEO4J_DB_PORT}:${NEO4J_DB_PORT}
+    - ${NEO4J_BOLT_PORT}:${NEO4J_BOLT_PORT}
     - 7575:7575
     restart: on-failure:0
-    # volumes:
-    #   - /var/lib/neo4j/data:/data
     environment:
       - NEO4JLABS_PLUGINS=["apoc"]
       - NEO4J_AUTH=${NEO4J_USERNAME}/${NEO4J_PASSWORD}
       - NEO4J_apoc_export_file_enabled=true 
       - NEO4J_apoc_import_file_enabled=true 
       - NEO4J_apoc_import_file_use__neo4j__config=true 
-      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7575
-      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:${NEO4J_DB_PORT}
+      - NEO4J_server_http_listen__address=0.0.0.0:7575
+      - NEO4J_server_bolt_listen__address=0.0.0.0:${NEO4J_BOLT_PORT}
       - NEO4J_AUTH=neo4j/password
+    networks:
+      - backend
 
-  # zoo1:
-  #   image: confluentinc/cp-zookeeper:7.3.2
-  #   hostname: zoo1
-  #   container_name: zoo1
-  #   ports:
-  #     - "2181:2181"
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_SERVER_ID: 1
-  #     ZOOKEEPER_SERVERS: zoo1:2888:3888
+  api:
+    container_name: api-test
+    image: context-api:0.1.1
+    ports:
+      - "5010:5010"
+      - "3128:3128"
+    environment:
+      KAFKA_BROKER: "kafka1:29092"
+      KAFKA_TOPIC: "emails"
+      PYTHONUNBUFFERED: 1
+      VECTOR_DB_HOST: "weaviate"
+      VECTOR_DB_PORT: 8081
+      NEO4J_URI: "neo4j:7688"
+      NEO4J_USERNAME: "${NEO4J_USERNAME}"
+      NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
+      NEO4J_DB_HOST: "neo4j-test"
+      NEO4J_DB_PORT: ${NEO4J_BOLT_PORT}
+      GROQ_API_KEY: "${GROQ_API_KEY}"
+    depends_on:
+      - weaviate
+      - neo4j
+    networks:
+      - backend
 
-  # kafka1:
-  #   image: confluentinc/cp-kafka:7.3.2
-  #   hostname: kafka1
-  #   container_name: kafka1
-  #   ports:
-  #     - "9092:9092"
-  #     - "29092:29092"
-  #     - "9999:9999"
-  #   environment:
-  #     KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-  #     KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-  #     KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-  #     KAFKA_JMX_PORT: 9999
-  #     KAFKA_JMX_HOSTNAME: ${DOCKER_HOST_IP:-127.0.0.1}
-  #     KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
-  #     KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
-  #     KAFKA_AUTO_CREATE_TOPICS: "true"
-  #   depends_on:
-  #     - zoo1
+networks:
+  backend:
+    driver: bridge
 
-  # processor:
-  #   image: context-processor:0.1.1
-  #   environment:
-  #     KAFKA_BROKER: "host.docker.internal:29092"
-  #     KAFKA_TOPIC: "emails"
-  #     PYTHONUNBUFFERED: 1
-  #     VECTOR_DB_HOST: "docker-weaviate-1"
-  #     VECTOR_DB_PORT: 8080
 
-  # event_processor:
-  #   image: event-processor:0.1.1
-  #   environment:
-  #     KAFKA_BROKER: "kafka1:29092"
-  #     KAFKA_TOPIC: "calendar"
-  #     PYTHONUNBUFFERED: 1
-  #     NEO4J_DB_HOST: "docker-neo4j-1"
-  #     NEO4J_DB_PORT: 7687
-  #     NEO4J_USERNAME: "${NEO4J_USERNAME}"
-  #     NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
-      
-  # # api:
-  # #   image: context-api:0.1.1
-  # #   ports:
-  # #     - "5010:5010"
-  # #     - "3127:3127"
-  # #   environment:
-  # #     KAFKA_BROKER: "kafka1:29092"
-  # #     KAFKA_TOPIC: "emails"
-  # #     PYTHONUNBUFFERED: 1
-  # #     VECTOR_DB_HOST: "docker-weaviate-1"
-  # #     VECTOR_DB_PORT: 8080
-  # #     NEO4J_URI: "docker-neo4j-1:7474"
-  # #     NEO4J_USERNAME: "${NEO4J_USERNAME}"
-  # #     NEO4J_PASSWORD: "${NEO4J_PASSWORD}"
-  # #     GROQ_API_KEY: "${GROQ_API_KEY}"
-  # #     GMAIL_CREDS: "${GMAIL_CREDS}"
